--- a/css/fietsen.css
+++ b/css/fietsen.css
@@ -1,10 +1,11 @@
-header {
-    background-image: url(https://i.ytimg.com/vi/mnNP-g-OSWc/maxresdefault.jpg);
-}
-
 section .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 article, aside {
@@ -12,8 +13,13 @@ article, aside {
 }
 
 aside {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 aside > h2 {
@@ -47,8 +53,12 @@ table td:last-child {
 }
 
 .title{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 20px;
 }
 
@@ -61,6 +71,8 @@ table td:last-child {
 }
 
 .review {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -73,6 +85,8 @@ table td:last-child {
 }
 
 .stars {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 10px;
 }
@@ -100,8 +114,13 @@ table td:last-child {
 
 @media screen and (min-width: 1024px) {
     section .wrapper {
-        flex-direction: row;
-        justify-content: space-between;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
     }
 
     article {
