--- a/css/about.css
+++ b/css/about.css
@@ -3,16 +3,6 @@ header {
     background-position: center center;
 }
 
-.content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-}
-
 .content h1 {
     text-align: left;
     margin-top: 25px;
@@ -30,21 +20,10 @@ header {
 }
 
 .person {
-    width: 100%;
     margin: 0;
     padding: 0;
     padding-bottom: 30px;
     text-align: left;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
 }
 
 .group .person:last-child{
@@ -73,11 +52,16 @@ header {
     }
 
     .person {
-        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
-            -ms-flex-flow: row;
-                flex-flow: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .person h2,p {
@@ -89,7 +73,8 @@ header {
     }
 
     .person img{
-        width: 40%
+        width: 40%;
+        flex-shrink: 0;
     }
 }
 
