--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,6 @@ header #header-content h1:after{
     bottom: 40px;
     width: 90%;
     max-width: 600px;
-    /* border: 1px solid #fff;
-    border-radius: 2px; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -57,6 +55,8 @@ header #header-content h1:after{
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #contact div {
@@ -86,29 +86,12 @@ header #header-content h1:after{
     font-size: 13px;
 }
 
-#about .wrapper{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-}
-
 #about img{
     width: 100%;
     height: auto;
 }
 
 #about article{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     margin-top: 30px;
 }
 
@@ -200,7 +183,6 @@ header #header-content h1:after{
     background-color: black;
     padding: 10px;
     border-radius: 2px;
-    position: absolute;
 }
 
 @-webkit-keyframes slider{
@@ -379,6 +361,9 @@ header #header-content h1:after{
     }
 
     #about .wrapper{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
             -ms-flex-direction: row;
@@ -398,9 +383,9 @@ header #header-content h1:after{
         display: inline-block;
         left: -200%;
     }
-
     #slider .slider-inner article div{
         width: 400px;
+        position: absolute;
     }
 
     #slider .slider-inner article:first-child div{
