--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -252,6 +252,11 @@ nav #menu>ol>li {
     line-height: 50px;
 }
 
+nav #menu>ol>li:last-child{
+    -webkit-box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 nav #menu a {
     display: block;
     text-decoration: none;
@@ -323,14 +328,20 @@ nav #menu ol li:hover ol {
         position: absolute;
         top: 80px;
         width: auto;
-        -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-                box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        -webkit-box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+                box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     }
+
 
     nav #menu ol ol a {
         text-align: left;
         line-height: 40px;
         padding: 0 15px;
+    }
+
+    nav #menu>ol>li:last-child{
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 }
 
