--- a/css/contact.css
+++ b/css/contact.css
@@ -33,19 +33,19 @@ ul li {
     display: block;
     list-style: none;
     margin: 10px 0 0 0;
+    position: relative;
 }
 
 form ul li div {
-    display: inline-block;
+    width: 100%;
+    position: relative;
 }
 
-form ul input[type=text],
-form ul input[type=email],
-textarea {
+form ul input,
+form textarea {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    border:1px solid #BEBEBE;
     padding: 7px;
     margin:0px;
     -webkit-transition: all 0.30s ease-in-out;
@@ -54,14 +54,33 @@ textarea {
     -o-transition: all 0.30s ease-in-out;
     outline: none;
     resize: none;
+    width: 100%;
+    position: relative;
+    border: none;
+    border-bottom: 1px solid #BEBEBE;
 }
 
-form ul input[type=text]:focus,
-form ul input[type=email]:focus,
-textarea:focus {
-    -webkit-box-shadow: 0 0 8px rgb(79, 89, 166);
-    box-shadow: 0 0 8px rgb(79, 89, 166);
-    border: 1px solid rgb(79, 89, 166);
+form ul input{
+    margin-bottom: 20px;
+}
+
+form .underline{
+    background-color: rgb(79, 89, 166);
+    bottom: 20px;
+    height: 2px;
+    border-radius: 2px;
+    width: 100%;
+    position: absolute;
+    transform: scale(0, 1);
+    transition: all 300ms;
+}
+form textarea + .underline {
+    bottom: 2px;
+}
+
+form ul input:focus + .underline,
+textarea:focus + .underline {
+    transform: scale(1);
 }
 
 form ul #bericht {
@@ -74,27 +93,20 @@ form ul label{
     padding:0px;
     display:block;
     font-weight: bold;
+    color: black;
+    transition: all 300ms
 }
 
 form ul {
     margin: 0 auto;
     padding: 0;
-    max-width: 600px;
     font: 13px 'Raleway', sans-serif;
 }
 
-form ul input[type=submit], .form-style-1 input[type=button]{
-    background: rgb(79, 89, 166);
+form ul input[type=submit]{
     padding: 8px 15px 8px 15px;
     border: none;
-    color: #fff;
-}
-
-form ul input[type=submit]:hover, .form-style-1 input[type=button]:hover{
-    background: rgb(70, 78, 136);
-    box-shadow:none;
-    -moz-box-shadow:none;
-    -webkit-box-shadow:none;
+    margin: 0 auto;
 }
 
 label span {
@@ -125,6 +137,27 @@ aside {
 
 .contact-card .content {
     text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+    .two-group{
+        display: flex;
+    }
+    form ul li div {
+        width: 50%;
+        position: relative;
+    }
+    form ul .two-group div:first-child{
+        padding-right: 2.5px;
+    }
+    form ul .two-group div:last-child{
+        padding-left: 2.5px;
+    }
+
+    form ul input[type="submit"]{
+        width: 150px;
+        margin: 0 0 0 auto;
+    }
 }
 
 @media screen and (min-width: 1024px) {
