Saved all images to local storage

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url(http://www.barryovereem.com/wp-content/uploads/SHTT-Lead-Image-Costumes.jpg);
+    background-image: url("../images/over_ons_header.jpg");
     background-position: center center;
 }
 
