--- a/css/bikes.css
+++ b/css/bikes.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url(https://www.gezinopreis.nl/wp-content/uploads/2014/07/fietsen_header.jpg);
+    background-image: url("../images/fietsen_header.jpg");
 }
 
 .page-content .wrapper {
