--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url("https://cdn.lifehacker.ru/wp-content/uploads/2016/08/road_line_marking_72284_1920x1080_1470552194.jpg");
+    background-image: url("../images/gallery_header.jpg");
 }
 
 .grid > .wrapper {
