--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -361,7 +361,7 @@ header .text {
     color: white;
     font-weight: 700;
     font-size: 25px;
-    text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, .8);
 }
 
 .small-header {
