--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@ html {
 header {
     position: relative;
     height: 100vh;
-    background: url("https://source.unsplash.com/5UQoVk8_d-4");
-    background-attachment: fixed;
-    background-size: cover;
+    background-image: url("../images/headerbg.jpg");
 }
 
 /* Why strange acting */
