--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -300,53 +300,10 @@ nav #menu ol li:hover ol {
     display: block;
 }
 
-@media screen and (min-width: 480px) {}
-
-@media screen and (min-width: 1024px) {
-    nav input+label {
-        display: none;
-    }
-    nav #menu>ol {
-        position: relative;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row;
-        background-color: transparent;
-        top: 0px;
-    }
-    nav #menu>ol>li {
-        min-height: inherit;
-        line-height: 80px;
-        position: relative;
-    }
-    nav #menu ol ol {
-        position: absolute;
-        top: 80px;
-        width: auto;
-        -webkit-box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-                box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    }
-
-
-    nav #menu ol ol a {
-        text-align: left;
-        line-height: 40px;
-        padding: 0 15px;
-    }
-
-    nav #menu>ol>li:last-child{
-        -webkit-box-shadow: none;
-                box-shadow: none;
-    }
-}
 
 header {
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-position: center center;
     background-size: cover;
 }
 
@@ -460,5 +417,51 @@ ul li {
 
     .outside {
         text-align: left;
+    }
+
+    header {
+        background-attachment: fixed;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    nav input+label {
+        display: none;
+    }
+    nav #menu>ol {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        background-color: transparent;
+        top: 0px;
+    }
+    nav #menu>ol>li {
+        min-height: inherit;
+        line-height: 80px;
+        position: relative;
+    }
+    nav #menu ol ol {
+        position: absolute;
+        top: 80px;
+        width: auto;
+        -webkit-box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+                box-shadow: 0 15px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+
+
+    nav #menu ol ol a {
+        text-align: left;
+        line-height: 40px;
+        padding: 0 15px;
+    }
+
+    nav #menu>ol>li:last-child{
+        -webkit-box-shadow: none;
+                box-shadow: none;
     }
 }
